# nixos

./: .envrc  .gitignore  .sops.yaml  configuration.nix  demo-secrets.nix  flake.nix  hardware-configuration.nix  iso.nix  readme.md  secrets.nix  update.sh  utils.nix
backgrounds/: ideas.md
backgrounds/cp2077/: src.txt
conf/: 3d.nix  aliases.nix  android-studio.nix  audio.nix  base.nix  bluetooth.nix  core.nix  disks.nix  gaming.nix  git.nix  hardware.nix  home.nix  idea.nix  neovim.nix  network.nix  nextcloud.nix  ollama.nix  persistence.nix  printing.nix  programs.nix  root-home.nix  server.nix  shell.nix  sops.nix  swap.nix  terminal.nix  unity.nix  user.nix  utils.nix  vbox.nix  wireguard.nix  wm.nix
conf/ags/: .envrc  .gitignore  bun.lockb  config.js  flake.nix  gen-types.sh  package.json  run-ags.sh  tsconfig.json  types
conf/ags/src/: clock.ts  clockH.ts  clockV.ts  config.ts  laptopBar.ts  nextcloud.ts  pcBar.ts  style.css  utils.ts
conf/ags/src/bluetooth/: bluetooth.css
conf/ags/src/clock/: clock.ts  clockH.css  clockH.ts  clockV.css  clockV.ts
conf/ags/src/music/: music.ts
conf/ags/src/nextcloud/: nextcloud.css  nextcloud.ts
conf/ags/src/services/: brightness.ts
conf/ags/src/slider/: slider.ts
conf/ags/src/volume/: volume.css  volume.ts
conf/ags/src/widgets/battery/: index.ts  style.css
conf/ags/src/widgets/bluetooth/: index.ts
conf/ags/src/widgets/button/: index.ts  style.css
conf/ags/src/widgets/clock/: index.ts  style.css
conf/ags/src/widgets/music/: style.css
conf/ags/src/widgets/nextcloud/: index.ts  style.css
conf/ags/src/widgets/slider/: index.ts  style.css
conf/ags/src/windows/: laptopBar.ts  pcBar.ts
conf/ags/styles/: clockH.css  clockV.css
conf/neovim/: c.lua  csharp.lua  fsharp.lua  hs.lua  init.lua  java.lua  js.lua  keys.lua  lsp.lua  neovim.nix  rust.lua  svelte.lua
conf/neovim/plugins/: editing.nix  lsp.nix  md.nix  pretty.nix  start.nix  telescope.nix
conf/server/: backup.nix  cloudflare-dns.nix  core.nix  docker.nix  duckdns.nix  firewall.nix  k3s-agent.nix  nas-mount.nix  nfs.nix  openssh.nix  rebuild-firewall.sh  transcode.nix
conf/wm/: core.nix  cursor.nix  lan-mouse.nix  lockscreen.nix  login.nix  notifications.nix  polkit.nix
conf/wm/ags/: config.js  config.ts  flake.nix  music.ts  run-ags.sh  style.css
conf/wm/ags/src/: clock.ts  config.ts  music.ts  nextcloud.ts  volume.ts
conf/wm/ags/styles/: clock.css  music.css  nextcloud.css  style.css  volume.css
conf/wm/hypr/: animations.conf  general.conf  hypr.nix  hyprland.conf  input.conf  keys.conf  monitors.sh  pretty.conf  rotate.sh  rules.conf  volume.fish  watch_monitors.sh
conf/wm/hypr/maybe/: arlo-laptop2.conf  arlo-nix.conf
conf/wm/hypr/scripts/: bridge_audio.fish  bridge_audio.sh  monitors.sh  performance.fish  rotate.sh  screenshot.sh  start_kbd.sh  toggle_keyword.sh  toggle_lock.fish  volume.fish  warnings.sh  watch_monitors.sh
conf/wm/hypr/scripts/shaders/: grayscale.glsl
conf/wm/kbd/: arlo-laptop2.kbd  kmonad.nix
conf/wm/lan-mouse/: arlo-laptop2.toml  arlo-nix.toml  lan-mouse.nix
config/eww/: bl_status.sh  eww.scss  eww.yuck
config/hypr/: hyprland.conf  keys.conf  monitors.conf  monitors.sh  pretty.conf  rotate.sh
config/hypr/maybe/: arlo-laptop2.conf
config/nix/: nix.conf
config/nixpkgs/: config.nix
hosts/: arlo-laptop1.nix  arlo-laptop2.nix  arlo-nix.nix
nvim/: README.md
pkgs/: pkgs.nix  porsmo.nix
pkgs/fix_pen/: fix_pen.sh  flake.nix
secrets/: secrets.yaml
templates/: templates.nix
templates/ansi-c/: flake.nix
templates/bun/: bun.lockb  flake.nix  package.json
templates/c/: flake.nix
templates/c-ansi/: .gitignore  Makefile  src.c
templates/cpp/: .gitignore  CMakeLists.txt  flake.nix
templates/cpp/src/: main.cpp
templates/cpp23/: .gitignore  CMakeLists.txt  flake.nix  run.sh
templates/cpp23/src/: main.cpp
templates/empty/: flake.nix
templates/hs/: Main.hs  flake.nix
templates/java/: Main.java  Makefile  flake.nix
templates/java-mvn/: .gitignore  flake.nix  help.md
templates/js/: flake.nix
templates/lean/: flake.nix  package.json  test.lean
templates/pio/: .gitignore  Makefile  flake.nix  makeDb.py  platformio.ini
templates/pio/src/: main.cpp
templates/py/: flake.nix
templates/py-ai/: flake.nix
templates/rust/: Cargo.toml  flake.nix
templates/rust_bevy/: Cargo.toml  flake.nix
templates/script/: flake.nix  my_script.sh
templates/simple-c/: Makefile  flake.nix
